--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.13",
     "axios": "^1.4.0",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "tw-elements": "^1.0.0-beta2",
     "zustand": "^4.3.8"
