--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.44.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "tw-elements": "^1.0.0-beta2",
     "zustand": "^4.3.8"
   },
