--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.6.1",
+    "immer": "^10.0.3",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
