--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.13",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.6.1",
@@ -20,6 +21,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-froala-wysiwyg": "^4.1.2",
     "react-hook-form": "^7.44.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
