--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.6.1",
+    "html-react-parser": "^4.2.2",
     "immer": "^10.0.3",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
