--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port 80",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 80"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^4.29.13",
     "@tinymce/tinymce-react": "^4.3.0",
     "@vitejs/plugin-react-swc": "^3.4.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.6.1",
@@ -39,7 +40,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
