--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^4.29.13",
     "@tinymce/tinymce-react": "^4.3.0",
     "@vitejs/plugin-react-swc": "^3.4.1",
+    "async-mutex": "^0.4.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
